spacing cards fixed

--- a/contact.css
+++ b/contact.css
@@ -6,32 +6,21 @@
   }
   
   .title {
+    padding-top: 0px !important;
     color: grey;
     font-size: 18px;
   }
-  
-  h1 {
-    font-size: 20px;
-    background-color: blue;
-  }
 
-  button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
+  h1 {
+    padding-top: 12px !important;
+    font-size: 24px !important;
   }
   
-  a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
+  p {
+    margin-top: 4px !important;
+    margin-bottom: 4px !important;
+    /* padding-top: 0 !important; */
+    /* padding-bottom: 0 !important; */
   }
   
   .card:hover {
@@ -46,4 +35,14 @@
   padding-left: 20%;
   padding-right: 20%;
   padding-top: 24px;
+}
+
+.contacts {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.contacts img {
+  width: 50px;
+  height: auto; 
 }
